增加本地缓存

--- a/module-main/src/main/res/values/strings.xml
+++ b/module-main/src/main/res/values/strings.xml
@@ -1,6 +1,3 @@
 <resources>
-    <string name="menu_home">头条</string>
-    <string name="menu_categories">地区</string>
-    <string name="menu_services">服务</string>
-    <string name="menu_account">我的</string>
+    <string name="main_name">module-main</string>
 </resources>
